--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,7 @@ header {
 }
 
 .project-description-container {
-    margin: 3em 0em 3em 1em;
+    margin: 6em 0em 3em 1em;
 }
 
 .project-description-subheading {
